[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-support-openenv"
version = "0.1.0"
description = "Smart Customer Support OpenEnv environment"
authors = [{ name = "Suhas" }]
requires-python = ">=3.8"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core>=0.2.0",
    "openai"
]

[project.scripts]
server = "server.app:app"

[tool.setuptools]
packages = ["server"]
